Update works with real content

--- a/index.html
+++ b/index.html
@@ -693,8 +693,9 @@
 
         // Works Library
         let works = [
-            { id: 1, title: '马斯克预言：2026年程序员失业？', platform: '微信公众号', status: '草稿', created: '2026-02-20', content: '...' },
-            { id: 2, title: 'OpenAI 8500亿估值分析', platform: '小红书', status: '选题中', created: '2026-02-20', content: '...' }
+            { id: 1, title: '土耳其武器机器狗曝光：SARBOT集成武器系统', platform: '小红书', status: '草稿', created: '2026-02-20', outline: '1. 视频介绍 2. 技术亮点 3. 军事趋势', content: '【土耳其首款武装机器狗SARBOT】... 原始链接: https://x.com/DefenseTrends/status/2024608798871343219' },
+            { id: 2, title: '机器人劳务上链！konnex_world获$15M融资', platform: '微信公众号', status: '草稿', created: '2026-02-20', outline: '1. konnex_world是什么 2. 融资详情 3. 区块链+机器人想象空间', content: '【机器人劳务上链：下一个万亿级赛道？】... 原文链接: https://x.com/VietHoHung/status/2024816315261964697' },
+            { id: 3, title: '前谷歌CEO斯坦福访谈泄露：AI将取代低技能工作', platform: '小红书', status: '草稿', created: '2026-02-20', outline: '1. 热点介绍 2. 核心观点 3. 争议内容', content: '【前谷歌CEO斯坦福访谈泄露】... 原始视频: https://x.com/grok/status/2024687080329093519' }
         ];
 
         function loadWorks() {
