Update works with Xiaohongshu posts

--- a/index.html
+++ b/index.html
@@ -693,9 +693,10 @@
 
         // Works Library
         let works = [
-            { id: 1, title: '土耳其武器机器狗曝光：SARBOT集成武器系统', platform: '小红书', status: '草稿', created: '2026-02-20', outline: '1. 视频介绍 2. 技术亮点 3. 军事趋势', content: '【土耳其首款武装机器狗SARBOT】... 原始链接: https://x.com/DefenseTrends/status/2024608798871343219' },
+            { id: 1, title: '土耳其武器机器狗SARBOT曝光', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 视频介绍 2. 技术亮点 3. 军事趋势', content: '标题：🔥 土耳其首款武装机器狗曝光！激光制导+武器系统... #机器人 #军事科技' },
             { id: 2, title: '当机器人开始"打工"，谁来收它的工资？', platform: '微信公众号', status: '已完成', created: '2026-02-20', outline: '1. konnex_world是什么 2. 融资详情 3. 区块链+机器人想象空间 4. 机会与风险 5. 结语', content: '6000字深度长文，分析机器人劳务上链赛道...' },
-            { id: 3, title: '前谷歌CEO斯坦福访谈泄露：AI将取代低技能工作', platform: '小红书', status: '草稿', created: '2026-02-20', outline: '1. 热点介绍 2. 核心观点 3. 争议内容', content: '【前谷歌CEO斯坦福访谈泄露】... 原始视频: https://x.com/grok/status/2024687080329093519' }
+            { id: 3, title: '前谷歌CEO斯坦福访谈泄露', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 热点介绍 2. 核心观点 3. 争议内容', content: '标题：💥 前谷歌CEO斯坦福访谈泄露：AI将取代低技能工作... #AI #斯坦福 #EricSchmidt' },
+            { id: 4, title: '机器人劳务上链konnex_world', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 热点介绍 2. 融资详情 3. 分析', content: '标题：🤖 机器人也能打工赚钱了？！... #机器人 #区块链 #Web3' }
         ];
 
         function loadWorks() {
