Add more works at night

--- a/index.html
+++ b/index.html
@@ -815,7 +815,46 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 这可能就是机器人版的"App Store"？
 
-#机器人 #融资 #AI #科技 #创业 #自动化`, link: 'https://x.com/news_politics_x/status/2023646092366114941' }
+#机器人 #融资 #AI #科技 #创业 #自动化`, link: 'https://x.com/news_politics_x/status/2023646092366114941' },
+            { id: 8, title: '宇树机器人上春晚', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 春晚介绍 2. 宇树技术 3. 中国机器人崛起', fullContent: `🐔 宇树机器人上春晚了！
+
+没错！今年春晚你看了吗？
+
+宇树的人形机器人团队表演了协调 swarm 系统，组成了"2026"和"宇树"的中文名！
+
+🇨🇳 这不是第一次宇树出圈了
+- 春晚机器人表演
+- 空翻、跳舞样样行
+- 全球最知名的中国机器人公司之一
+
+💬 之前还有视频显示宇树机器人在沙漠环境里...
+
+你们觉得中国机器人技术现在什么水平？
+
+#宇树 #机器人 #春晚 #中国 #科技 #AI`, link: 'https://x.com/CGTNEurope/status/2024442164823150894' },
+            { id: 9, title: 'Gemini 3.1 Pro 发布', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 发布介绍 2. 性能提升 3. 行业影响', fullContent: `🔥 Google 发布 Gemini 3.1 Pro！
+
+又又又更新了！这次是核心模型的大升级：
+
+📊 性能提升：
+- 核心推理性能大幅提升
+- ARC-AGI-2测试达77.1%
+- 推理能力提升超100%
+- 多模态生成和语义理解也升级了
+
+🎯 适用场景：
+- 科学计算
+- 工程分析
+- 研究复杂场景
+
+📱 现在可以在：
+- Google AI Studio
+- Vertex AI
+- Gemini App
+
+体验了！感觉如何？
+
+#Google #Gemini #AI #大模型 #科技 #突破`, link: 'https://x.com/daizhe9898/status/2024793720663818571' }
         ];
 
         function loadWorks() {
