Add NVIDIA post

--- a/index.html
+++ b/index.html
@@ -854,7 +854,26 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 体验了！感觉如何？
 
-#Google #Gemini #AI #大模型 #科技 #突破`, link: 'https://x.com/daizhe9898/status/2024793720663818571' }
+#Google #Gemini #AI #大模型 #科技 #突破`, link: 'https://x.com/daizhe9898/status/2024793720663818571' },
+            { id: 10, title: 'NVIDIA 开源机器人方案', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. SONIC开源 2. 远程操作 3. GR00T布局', fullContent: `🔥 NVIDIA 开源了！
+
+刚刚 NVIDIA 开源了 SONIC——通用全身机器人方案！
+
+🤔 这是啥？
+- 远程操作（teleoperation）是机器人学习最大的瓶颈
+- 慢、贵、硬件特定
+- NVIDIA 开源这个方案，就是让所有人一起帮它收集数据
+
+💡 目的是啥？
+- 打造 GR00T 基础模型
+- 众包收集多样化、高质量的操控数据
+- 创造"飞轮效应"
+
+🚀 这波操作：
+- 不是单纯分享工具
+- 是让大家帮它打工训练AI！
+
+#NVIDIA #机器人 #开源 #GR00T #AI #科技`, link: 'https://x.com/ZagZino/status/2024780259334185037' }
         ];
 
         function loadWorks() {
