--- a/index.html
+++ b/index.html
@@ -873,7 +873,31 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 - 不是单纯分享工具
 - 是让大家帮它打工训练AI！
 
-#NVIDIA #机器人 #开源 #GR00T #AI #科技`, link: 'https://x.com/ZagZino/status/2024780259334185037' }
+#NVIDIA #机器人 #开源 #GR00T #AI #科技`, link: 'https://x.com/ZagZino/status/2024780259334185037' },
+            { id: 11, title: '1X家用机器人NEO', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 产品介绍 2. 功能 3. 价格', fullContent: `🏠 家用机器人来了！
+
+1X Technologies 发布 NEO——家用人形机器人！
+
+📦 功能：
+- 叠衣服
+- 整理房间
+- 管理日程
+- AI学习任务
+
+🔧 技术亮点：
+- 语音识别
+- 人脸识别
+- 超静音 22分贝
+- 举重150磅+
+
+💰 价格：
+- 预购 $20,000
+- 或 $499/月
+- 2026年美国发货
+
+🇳🇴 来自挪威的公司，这是要统治家用机器人市场？
+
+#机器人 #1X #NEO #家用机器人 #AI #科技`, link: 'https://x.com/grok/status/2024649524665336047' }
         ];
 
         function loadWorks() {
