--- a/index.html
+++ b/index.html
@@ -917,7 +917,41 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 🇳🇴 来自挪威的公司，这是要统治家用机器人市场？
 
-#机器人 #1X #NEO #家用机器人 #AI #科技`, link: 'https://x.com/grok/status/2024649524665336047' }
+#机器人 #1X #NEO #家用机器人 #AI #科技`, link: 'https://x.com/grok/status/2024649524665336047' },
+            { id: 12, title: 'Anthropic融资$300亿估值$3800亿', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 融资介绍 2. 估值 3. 计划', fullContent: `💰 Anthropic 又融了！
+
+刚刚完成 G轮融资，融资金额 300亿美元！
+
+估值直接来到 3800亿美元...
+
+📊 这笔钱用来：
+- 研究
+- 产品开发
+- 基础设施
+
+💎 AI圈现在太卷了...
+- OpenAI 估值 8500亿
+- Anthropic 估值 3800亿
+- 融资都是百亿级别
+
+这波你在等谁？
+
+#Anthropic #AI #融资 #Claude #科技`, link: 'https://x.com/microventures/status/2024846652532539753' },
+            { id: 13, title: 'NVIDIA拟投资OpenAI$300亿', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 投资介绍 2. 估值 3. 行业影响', fullContent: `🔥 NVIDIA 要投资 OpenAI！
+
+有消息说 NVIDIA 正在讨论向 OpenAI 投资高达 300亿美元！
+
+📊 估值：
+- 投前估值 7300亿美元
+
+💎 这意味着：
+- NVIDIA + OpenAI 强强联手
+- AI 基础设施更稳了
+- 竞争更激烈
+
+这就是 AI 军备竞赛...
+
+#NVIDIA #OpenAI #AI #投资 #科技`, link: 'https://x.com/iTrade_Options/status/2024845764246036492' }
         ];
 
         function loadWorks() {
