--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                     <option value="week">本周</option>
                     <option value="month">本月</option>
                 </select>
+                <input type="text" id="searchWorks" oninput="searchWorks()" placeholder="搜索作品..." class="p-2 rounded-lg bg-white/10 text-white text-sm w-40">
             </div>
             
             <div id="worksList" class="space-y-3"></div>
@@ -966,10 +967,10 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
         let currentCategory = 'all';
         let currentDateFilter = 'all';
+        let currentSearch = '';
 
         function filterWorks(category) {
             currentCategory = category;
-            // Update button styles
             document.querySelectorAll('.category-btn').forEach(btn => {
                 if (btn.dataset.category === category) {
                     btn.className = 'category-btn active px-3 py-1 rounded-lg text-sm bg-white/20 text-white';
@@ -982,6 +983,11 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
         function filterByDate() {
             currentDateFilter = document.getElementById('dateFilter').value;
+            renderWorks();
+        }
+
+        function searchWorks() {
+            currentSearch = document.getElementById('searchWorks').value.toLowerCase();
             renderWorks();
         }
 
@@ -1004,6 +1010,13 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
             const list = document.getElementById('worksList');
             let filtered = currentCategory === 'all' ? works : works.filter(w => w.platform === currentCategory);
             filtered = filtered.filter(w => matchesDateFilter(w.created));
+            // Search filter
+            if (currentSearch) {
+                filtered = filtered.filter(w => 
+                    w.title.toLowerCase().includes(currentSearch) || 
+                    (w.content && w.content.toLowerCase().includes(currentSearch))
+                );
+            }
             if (filtered.length === 0) {
                 list.innerHTML = '<div class="text-gray-500 text-center py-4">暂无作品</div>';
                 return;
