--- a/index.html
+++ b/index.html
@@ -959,7 +959,25 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 这就是 AI 军备竞赛...
 
-#NVIDIA #OpenAI #AI #投资 #科技`, link: 'https://x.com/iTrade_Options/status/2024845764246036492' }
+#NVIDIA #OpenAI #AI #投资 #科技`, link: 'https://x.com/iTrade_Options/status/2024845764246036492' },
+            { id: 14, title: 'Figure AI估值$480亿', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 估值 2. 出货量 3. 行业地位', fullContent: `💰 Figure AI 估值480亿美元！
+
+最新数据：
+
+📊 估值：
+- 480亿美元+
+- 出货量：70,000+ 台
+
+🚀 这就是机器人热潮的领头羊！
+
+#FigureAI #机器人 #估值 #科技 #AI`, link: 'https://x.com/Harisha44986379/status/2024858844163874894' },
+            { id: 15, title: 'Figure AI机器人定价$20000', platform: '小红书', status: '已完成', created: '2026-02-20', outline: '1. 价格 2. 产地 3. 市场', fullContent: `💲 Figure AI 机器人只要$20000！
+
+在加州制造，售价 $20,000...
+
+这价格，真的要普及了？
+
+#FigureAI #机器人 #价格 #科技`, link: 'https://x.com/RPudhucode/status/2024857784164962378' }
         ];
 
         function loadWorks() {
