Add Spring Festival Gala robots post

--- a/index.html
+++ b/index.html
@@ -997,7 +997,27 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 这价格，真的要普及了？
 
-#FigureAI #机器人 #价格 #科技`, link: 'https://x.com/RPudhucode/status/2024857784164962378' }
+#FigureAI #机器人 #价格 #科技`, link: 'https://x.com/RPudhucode/status/2024857784164962378' },
+            { id: 16, title: '宇树机器人上春晚，中国科技出圈', platform: '小红书', status: '已完成', created: '2026-02-21', outline: '1. 春晚热点 2. 宇树是谁 3. 为什么重要', fullContent: `🏮 宇树机器人上春晚了！
+
+2026春晚，宇树机器人火出圈了！
+
+🇨🇳 这不是第一次宇树出圈
+- 春晚机器人表演
+- 空翻、跳舞样样行
+- 全球最知名的中国机器人公司
+
+💬 外国网友都惊了：
+"这不是特效，这是真机器人！"
+
+🤔 为什么上春晚？
+- 展示中国科技实力
+- 人形机器人进入大众视野
+- 商业化信号
+
+你们觉得中国机器人技术现在什么水平？
+
+#宇树 #机器人 #春晚 #中国 #科技 #AI #人形机器人`, link: 'https://www.bilibili.com/video/BV1bhZYBWEyq/' }
         ];
 
         function loadWorks() {
