Add more posts 17-18

--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,9 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
 
 你们觉得中国机器人技术现在什么水平？
 
-#宇树 #机器人 #春晚 #中国 #科技 #AI #人形机器人`, link: 'https://www.bilibili.com/video/BV1bhZYBWEyq/' }
+#宇树 #机器人 #春晚 #中国 #科技 #AI #人形机器人`, link: 'https://www.bilibili.com/video/BV1bhZYBWEyq/'             },
+            { id: 17, title: "波士顿动力Atlas学会空翻了", platform: "小红书", status: "已完成", created: "2026-02-21", fullContent: "CES展示，Atlas已学会连续空翻！约100kg的电动Atlas，连续空翻，搬运能力增强。运动能力接近人类，可以在复杂环境工作，离商用越来越近。#波士顿动力 #Atlas #机器人 #CES", link: "https://www.bilibili.com/video/BV1N3rVBmEfF/" }
+        ];
         ];
 
         function loadWorks() {
