Fix JS syntax error

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         loadTasks();
 
         function saveTasks() {
-            localStorage.setItem('missionTasks', JSON.stringify(tasks));
+            localStorage.setItem('missionTasks', JSON.stringify(tasks);
         }
 
         // Cron to human readable
