Restore working version

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         loadTasks();
 
         function saveTasks() {
-            localStorage.setItem('missionTasks', JSON.stringify(tasks);
+            localStorage.setItem('missionTasks', JSON.stringify(tasks));
         }
 
         // Cron to human readable
@@ -1120,20 +1120,17 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
                     btn.className = 'category-btn px-3 py-1 rounded-lg text-sm bg-white/10 text-gray-400 hover:bg-white/20';
                 }
             });
-            render();
-        renderWorks();
+            renderWorks();
         }
 
         function filterByDate() {
             currentDateFilter = document.getElementById('dateFilter').value;
-            render();
-        renderWorks();
+            renderWorks();
         }
 
         function searchWorks() {
             currentSearch = document.getElementById('searchWorks').value.toLowerCase();
-            render();
-        renderWorks();
+            renderWorks();
         }
 
         function matchesDateFilter(created) {
@@ -1199,8 +1196,7 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
             };
             works.push(newWork);
             saveWorks();
-            render();
-        renderWorks();
+            renderWorks();
         }
 
         function showWorkDetail(id) {
@@ -1281,8 +1277,7 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
             if (confirm('确定删除这个作品吗？')) {
                 works = works.filter(w => w.id !== id);
                 saveWorks();
-                render();
-        renderWorks();
+                renderWorks();
                 renderWorksStats();
                 closeDetailModal();
             }
@@ -1298,7 +1293,6 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
             a.click();
         }
 
-        render();
         renderWorks();
         renderWorksStats();
     </script>
@@ -1331,15 +1325,11 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
     </div>
 
     <script>
-        // Wait for DOM to be ready
-        document.addEventListener('DOMContentLoaded', function() {
-            render();
-            renderWorks();
-            renderWorksStats();
-            renderWorksPreview();
-            renderPapersPreview();
-            renderPapersList();
-        });
+        renderWorks();
+        renderWorksStats();
+        renderWorksPreview();
+        renderPapersPreview();
+        renderPapersList();
     </script>
 </body>
 </html>
