--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
     </div>
 
     <script>
+        render();
         document.addEventListener('DOMContentLoaded', function() {
             render();
             renderWorks();
@@ -1329,6 +1330,7 @@ Trener Robotics 刚完成了 3200万美元 融资，做的是"通用技能平台
     </div>
 
     <script>
+        render();
         document.addEventListener('DOMContentLoaded', function() {
             render();
             renderWorks();
